fixing zoom + scroll issues (#8)
* small text size and copy edits

* fixing some spacing / sizing / layout stuff with text

* fixing warning on package name + surfacing localhost to the network by
default

* fixing zoom issue stemming from interacting with form on mobile

* fixing unnecessary vertical scrollbars on mobile

--- a/src/components/SignUpFormReact.module.css
+++ b/src/components/SignUpFormReact.module.css
@@ -62,6 +62,7 @@
 
 .input {
     color: white;
+    font-size: 16px;
 }
 
 .button {
